--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     header {
-      background: url('banner.jpg') center/cover no-repeat;
+      background: url('mission.jpeg') center/cover no-repeat;
       padding: 40px 20px;
       text-align: center;
       color: white;
@@ -99,7 +99,7 @@
   </section>
 
   <section class="section">
-    <img src="vision.jpg" alt="Vision">
+    <img src="vission.jpg" alt="Vision">
     <div class="section-content">
       <h2>Vision</h2>
       <p>"Develop the potential of each Individual and stretch it into the maximum"</p>
@@ -110,7 +110,7 @@
 
   <!-- Services -->
   <section class="section">
-    <img src="service-autism.jpg" alt="Autism Training">
+    <img src="training_autism.jpg" alt="Autism Training">
     <div class="section-content">
       <h2>Training for Autism Students</h2>
       <p>We are providing training for Autism students & some students after necessary rehabilitation and training have gone back to mainstream schools.</p>
@@ -118,7 +118,7 @@
   </section>
 
   <section class="section">
-    <img src="service-vocational.jpg" alt="Vocational Training">
+    <img src="vocational_training.jpg" alt="Vocational Training">
     <div class="section-content">
       <h2>Vocational Training</h2>
       <p>Vocational Training Centres are designed to enable differently abled persons to secure and retain suitable employment.</p>
@@ -126,7 +126,7 @@
   </section>
 
   <section class="section">
-    <img src="service-yoga.jpg" alt="Yoga">
+    <img src="yoga.jpg" alt="Yoga">
     <div class="section-content">
       <h2>Yoga</h2>
       <p>Children with special needs have various physical and mental disabilities which affect their mental attitude. Yoga helps strengthen both body and mind.</p>
@@ -134,7 +134,7 @@
   </section>
 
   <section class="section">
-    <img src="service-occupational.jpg" alt="Occupational Therapy">
+    <img src="occupational_therapy.jpeg" alt="Occupational Therapy">
     <div class="section-content">
       <h2>Occupational Therapy</h2>
       <p>Helps students increase their functional independence in daily life. Periodical assessments are conducted by occupational therapists.</p>
@@ -158,7 +158,7 @@
   </section>
 
   <section class="section">
-    <img src="service-education.jpg" alt="Special Education">
+    <img src="special_education.jpg" alt="Special Education">
     <div class="section-content">
       <h2>Special Education</h2>
       <p>Provides body movement training, hygiene, communication, reading, writing, calculations, and more by experienced special educators.</p>
@@ -166,7 +166,7 @@
   </section>
 
   <section class="section">
-    <img src="service-medical.jpg" alt="Medical Checkup">
+    <img src="medical_checkup.jpg" alt="Medical Checkup">
     <div class="section-content">
       <h2>Medical Checkup</h2>
       <p>Twice a year, medical checkups are held. Monthly medicines are provided by Saradha Homeo Hospital. Students are assessed individually.</p>
@@ -174,7 +174,7 @@
   </section>
 
   <section class="section">
-    <img src="service-food.jpg" alt="Healthy Foods">
+    <img src="healthy_foods.jpg" alt="Healthy Foods">
     <div class="section-content">
       <h2>Healthy Foods</h2>
       <p>Natural and nutritional foods like sprouts, nuts, fruits, and vegetables are served to improve immunity and health.</p>
@@ -183,7 +183,7 @@
 
   <!-- Celebration -->
   <section class="section">
-    <img src="festive.jpg" alt="Festive Celebration">
+    <img src="festive_celebration.jpg" alt="Festive Celebration">
     <div class="section-content">
       <h2>Festive Celebration</h2>
       <p>Yoga, Independence Day, Onam, Krishna Jayanti, Diwali, Children’s Day, Differently Abled Day, Pongal, and Republic Day are celebrated with Sevabharathi officials, sponsors, parents, and community members.</p>
@@ -199,7 +199,7 @@
   </section>
 
   <section class="section">
-    <img src="competition.jpg" alt="Competitions and Prizes">
+    <img src="competition_prizes.jpg" alt="Competitions and Prizes">
     <div class="section-content">
       <h2>Competitions and Prizes</h2>
       <p>Students participate in competitions like singing, dancing, and speech at other schools and win prizes, bringing pride to our school.</p>
@@ -207,7 +207,7 @@
   </section>
 
   <section class="section">
-    <img src="outdoor.jpg" alt="Outdoor Activities">
+    <img src="outdoor_activities.jpg" alt="Outdoor Activities">
     <div class="section-content">
       <h2>Outdoor Activities</h2>
       <p>Students are taken to public and tourist places monthly to enhance social knowledge and outdoor experience.</p>
@@ -223,7 +223,7 @@
   </section>
 
   <section class="section">
-    <img src="extra.jpg" alt="Extra Curricular Activities">
+    <img src="extra_curricular.jpg" alt="Extra Curricular Activities">
     <div class="section-content">
       <h2>Extra Curricular Activities</h2>
       <p>Includes training in Bharatanatyam, singing, drawing, drama, reading, writing, hygiene, hobbies, and more by qualified teachers through the special education system.</p>
@@ -261,3 +261,4 @@
   </footer>
 </body>
 </html>
+
