--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       text-align: center;
       color: white;
       backdrop-filter: blur(6px);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
     header h1 {
@@ -41,27 +44,46 @@
       margin: auto;
     }
 
-    .section {
-      background: white;
+    .section-content {
       margin-bottom: 20px;
+      background: white;
+      padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease;
+    }
+
+    .section-content:active {
+      transform: scale(0.98);
+    }
+
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+    }
+
+    .service-card {
+      background: white;
+      border-radius: 10px;
       overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       transition: transform 0.2s ease;
     }
 
-    .section:hover {
-      transform: scale(1.01);
+    .service-card:active {
+      transform: scale(0.98);
     }
 
-    .section img {
+    .service-card img {
       width: 100%;
-      height: auto;
+      height: 200px;
+      object-fit: cover;
       display: block;
     }
 
-    .section-content {
-      padding: 20px;
+    .service-card .section-content {
+      padding: 15px 20px;
     }
 
     h2 {
@@ -80,6 +102,7 @@
       header h1 {
         font-size: 1.8rem;
       }
+
       header p {
         font-size: 1rem;
       }
@@ -95,163 +118,164 @@
 
   <section class="section-content">
     <h2>About Us</h2>
-    <p>Vathsalyam, School is a special project of Sevabharathi, which was started on 17/08/2010 at Padmanapaburam Sevabharathi office , only with 2 students. But more than 70 students were benefitted with this. It serves different types of activities to get a progress in rural and urban areas with a lot of cultural, economical and social changes in the society. And now our "VATHSALYAM" is located in Krishnancoil street, Keralapuram, Kanyakumari District with 35 students, 4 Special Educators, Principal, Coordinator, along with 3 helpers.</p>
+    <p>Vathsalyam is a special project of Sevabharathi, which was started on 17/08/2010 at Padmanapaburam Sevabharathi office with only 2 students. More than 70 students have benefitted from this initiative. Currently, VATHSALYAM is located in Krishnancoil Street, Keralapuram, Kanyakumari District with 35 students, 4 Special Educators, a Principal, a Coordinator, and 3 Helpers.</p>
   </section>
 
-  <section class="section">
-    <img src="vission.jpg" alt="Vision">
-    <div class="section-content">
-      <h2>Vision</h2>
-      <p>"Develop the potential of each Individual and stretch it into the maximum"</p>
-      <h2>Mission</h2>
-      <p>"Together with the community to create social changes for the differently abled — make it work"</p>
+  <section class="section-content">
+    <h2>Vision & Mission</h2>
+    <p><strong>Vision:</strong> "Develop the potential of each Individual and stretch it into the maximum."</p>
+    <p><strong>Mission:</strong> "Together with the community to create social changes for the differently abled — make it work."</p>
+  </section>
+
+  <section class="section-content">
+    <h2>Our Services</h2>
+    <div class="services-grid">
+
+      <div class="service-card">
+        <img src="training_autism.jpg" alt="Training for Autism Students">
+        <div class="section-content">
+          <h3>Training for Autism Students</h3>
+          <p>We are providing training for autism students. Some students, after necessary rehabilitation and training, have gone back to mainstream schools.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="vocational_training.jpg" alt="Vocational Training">
+        <div class="section-content">
+          <h3>Vocational Training</h3>
+          <p>Vocational Training Centres are designed to enable differently abled persons to secure and retain suitable employment.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="yoga.jpg" alt="Yoga">
+        <div class="section-content">
+          <h3>Yoga</h3>
+          <p>Yoga helps children with special needs strengthen both their body and mind, improving their physical and mental health.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="occupational_therapy.jpeg" alt="Occupational Therapy">
+        <div class="section-content">
+          <h3>Occupational Therapy</h3>
+          <p>Helps students increase their functional independence in daily life. Periodical assessments are conducted by therapists.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="service-physio.jpg" alt="Physiotherapy">
+        <div class="section-content">
+          <h3>Physiotherapy</h3>
+          <p>Reduces physical deformities and increases mobility. Children enjoy physiotherapy and benefit greatly from it.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="service-speech.jpg" alt="Speech Therapy">
+        <div class="section-content">
+          <h3>Speech Therapy</h3>
+          <p>Essential for improving cognitive and social development among children with developmental disabilities.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="special_education.jpg" alt="Special Education">
+        <div class="section-content">
+          <h3>Special Education</h3>
+          <p>Focuses on body movement, hygiene, communication, reading, writing, calculations, etc., by qualified educators.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="medical_checkup.jpg" alt="Medical Checkup">
+        <div class="section-content">
+          <h3>Medical Checkup</h3>
+          <p>Medical checkups are conducted twice a year. Monthly medicine is supplied by Saradha Homeo Hospital.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="healthy_foods.jpg" alt="Healthy Foods">
+        <div class="section-content">
+          <h3>Healthy Foods</h3>
+          <p>Natural & nutritional foods like sprouts, fruits, nuts, and vegetables are prepared and served to improve students' immunity.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="festive_celebration.jpg" alt="Festive Celebration">
+        <div class="section-content">
+          <h3>Festive Celebration</h3>
+          <p>Functions like Yoga Day, Onam, Krishna Jayanti, Diwali, Children’s Day, Pongal, etc. are celebrated with joy and community participation.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="sports.jpg" alt="Sports Activities">
+        <div class="section-content">
+          <h3>Sports Activities</h3>
+          <p>Various sports like 50m/100m/200m running, long jump, frog race, musical chair are trained by an ex-army official.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="competition_prizes.jpg" alt="Competitions and Prizes">
+        <div class="section-content">
+          <h3>Competitions and Prizes</h3>
+          <p>Our students participate in interschool singing, dancing, and speech competitions and bring pride to our school with their talents.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="outdoor_activities.jpg" alt="Outdoor Activities">
+        <div class="section-content">
+          <h3>Outdoor Activities</h3>
+          <p>Students are taken to public and tourist places every month to develop social knowledge and outdoor experience.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="special-efforts.jpg" alt="Special Efforts">
+        <div class="section-content">
+          <h3>Special Efforts</h3>
+          <p>Slow learners are taught the normal school syllabus and sent to mainstream schools. 6 students have transitioned successfully.</p>
+        </div>
+      </div>
+
+      <div class="service-card">
+        <img src="extra_curricular.jpg" alt="Extra Curricular Activities">
+        <div class="section-content">
+          <h3>Extra Curricular Activities</h3>
+          <p>Activities like Bharatanatyam, singing, drawing, drama, reading, writing, social communication and more are trained by professionals.</p>
+        </div>
+      </div>
+
     </div>
   </section>
 
-  <!-- Services -->
-  <section class="section">
-    <img src="training_autism.jpg" alt="Autism Training">
-    <div class="section-content">
-      <h2>Training for Autism Students</h2>
-      <p>We are providing training for Autism students & some students after necessary rehabilitation and training have gone back to mainstream schools.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="vocational_training.jpg" alt="Vocational Training">
-    <div class="section-content">
-      <h2>Vocational Training</h2>
-      <p>Vocational Training Centres are designed to enable differently abled persons to secure and retain suitable employment.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="yoga.jpg" alt="Yoga">
-    <div class="section-content">
-      <h2>Yoga</h2>
-      <p>Children with special needs have various physical and mental disabilities which affect their mental attitude. Yoga helps strengthen both body and mind.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="occupational_therapy.jpeg" alt="Occupational Therapy">
-    <div class="section-content">
-      <h2>Occupational Therapy</h2>
-      <p>Helps students increase their functional independence in daily life. Periodical assessments are conducted by occupational therapists.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="service-physio.jpg" alt="Physiotherapy">
-    <div class="section-content">
-      <h2>Physiotherapy</h2>
-      <p>Reduces physical deformities and increases mobility. Children enjoy physiotherapy and parents are happy to send their children to school.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="service-speech.jpg" alt="Speech Therapy">
-    <div class="section-content">
-      <h2>Speech Therapy</h2>
-      <p>Important for children with developmental disabilities to improve cognitive and social development.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="special_education.jpg" alt="Special Education">
-    <div class="section-content">
-      <h2>Special Education</h2>
-      <p>Provides body movement training, hygiene, communication, reading, writing, calculations, and more by experienced special educators.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="medical_checkup.jpg" alt="Medical Checkup">
-    <div class="section-content">
-      <h2>Medical Checkup</h2>
-      <p>Twice a year, medical checkups are held. Monthly medicines are provided by Saradha Homeo Hospital. Students are assessed individually.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="healthy_foods.jpg" alt="Healthy Foods">
-    <div class="section-content">
-      <h2>Healthy Foods</h2>
-      <p>Natural and nutritional foods like sprouts, nuts, fruits, and vegetables are served to improve immunity and health.</p>
-    </div>
-  </section>
-
-  <!-- Celebration -->
-  <section class="section">
-    <img src="festive_celebration.jpg" alt="Festive Celebration">
-    <div class="section-content">
-      <h2>Festive Celebration</h2>
-      <p>Yoga, Independence Day, Onam, Krishna Jayanti, Diwali, Children’s Day, Differently Abled Day, Pongal, and Republic Day are celebrated with Sevabharathi officials, sponsors, parents, and community members.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="sports.jpg" alt="Sports Activities">
-    <div class="section-content">
-      <h2>Sports Activities</h2>
-      <p>Various sports including running, musical chair, jumping, frog race, etc. are trained by an ex-army official.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="competition_prizes.jpg" alt="Competitions and Prizes">
-    <div class="section-content">
-      <h2>Competitions and Prizes</h2>
-      <p>Students participate in competitions like singing, dancing, and speech at other schools and win prizes, bringing pride to our school.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="outdoor_activities.jpg" alt="Outdoor Activities">
-    <div class="section-content">
-      <h2>Outdoor Activities</h2>
-      <p>Students are taken to public and tourist places monthly to enhance social knowledge and outdoor experience.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="special-efforts.jpg" alt="Special Efforts">
-    <div class="section-content">
-      <h2>Special Efforts</h2>
-      <p>Slow learners are trained in the normal syllabus and transitioned to regular schools. Six students have successfully moved on this way.</p>
-    </div>
-  </section>
-
-  <section class="section">
-    <img src="extra_curricular.jpg" alt="Extra Curricular Activities">
-    <div class="section-content">
-      <h2>Extra Curricular Activities</h2>
-      <p>Includes training in Bharatanatyam, singing, drawing, drama, reading, writing, hygiene, hobbies, and more by qualified teachers through the special education system.</p>
-    </div>
-  </section>
-
-  <!-- Final Section -->
   <section class="section-content">
     <h2>What Can We Do?</h2>
-    <p>Events such as weddings, anniversaries, and birthdays can be shared with our children.</p>
+    <p>Events such as weddings, anniversaries, and birthdays can be shared with the children at our school.</p>
     <h3>Current Requirements:</h3>
     <p>ஒரு நாள் பராமரிப்பு செலவு : ₹10,000/-<br>
-    ஒரு மாத பராமரிப்பு செலவு : ₹2,00,000/-<br>
-    ஒரு வருட பராமரிப்பு செலவு : ₹24,00,000/-</p>
+      ஒரு மாத பராமரிப்பு செலவு : ₹2,00,000/-<br>
+      ஒரு வருட பராமரிப்பு செலவு : ₹24,00,000/-</p>
 
     <h3>Bank Details:</h3>
     <p>Bank Name: State Bank of India, Vadassery, Nagercoil<br>
-    A/C No: 34691671515<br>
-    IFSC: SBIN0000880</p>
+      Account Number: 34691671515<br>
+      IFSC Code: SBIN0000880</p>
 
-    <h3>Contact Info:</h3>
+    <h3>Contact Information:</h3>
     <p>Phone: 94446 18957, 94423 78957<br>
-    Email: vathsalyam2011@gmail.com</p>
+      Email: vathsalyam2011@gmail.com</p>
 
     <p><strong>Address:</strong><br>
-    Vathsalyam Special School for Intellectual Children<br>
-    Krishnancoil Street, Keralapuram,<br>
-    Thiruvithancode Post – 629174, Kanyakumari District.</p>
+      Vathsalyam Special School for Intellectual Children<br>
+      Krishnancoil Street, Keralapuram,<br>
+      Thiruvithancode Post – 629174,<br>
+      Kanyakumari District.</p>
 
     <p>Visit with your family! Request a hand with us on this service!</p>
   </section>
@@ -260,5 +284,5 @@
     <p>© VATHSALYAM 2025 - All Rights Reserved</p>
   </footer>
 </body>
-</html>
 
+</html>
