--- a/index.html
+++ b/index.html
@@ -135,16 +135,24 @@
     <p>Vathsalyam is a special project of Sevabharathi, which was started on 17/08/2010 at Padmanapaburam Sevabharathi office with only 2 students. Over time, more than 70 students have benefited from this initiative. It supports a variety of activities to bring about cultural, economic, and social progress in rural and urban areas. Today, VATHSALYAM is located in Krishnancoil Street, Keralapuram, Kanyakumari District, and serves 35 students with the help of 4 special educators, a principal, a coordinator, and 3 helpers.</p>
   </section>
 
-  <!-- Vision and Mission -->
-  <section class="section">
-    <img src="vission.jpg" alt="Vision">
+  <!-- Vision and Mission as Cards in Grid -->
+<section class="grid-2">
+  <div class="section">
+    <img src="vission.jpg" alt="Vision Image" />
     <div class="section-content">
       <h2>Vision</h2>
       <p>"Develop the potential of each individual and stretch it into the maximum."</p>
+    </div>
+  </div>
+  <div class="section">
+    <img src="mission.jpeg" alt="Mission Image" />
+    <div class="section-content">
       <h2>Mission</h2>
       <p>"Together with the community to create social changes for the differently abled — make it work."</p>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Services Grid -->
   <section class="grid-2">
@@ -300,3 +308,4 @@
   </footer>
 </body>
 </html>
+
