--- a/index.html
+++ b/index.html
@@ -5,6 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VATHSALYAM - Special School</title>
   <style>
+    :root {
+  --bg-color: #f2f2f2;
+  --text-color: #333;
+  --card-bg: #fff;
+  --header-bg: rgba(0, 0, 0, 0.6);
+  --hover-scale: 1.02;
+}
+
+body.dark {
+  --bg-color: #121212;
+  --text-color: #f0f0f0;
+  --card-bg: #1e1e1e;
+  --header-bg: rgba(255, 255, 255, 0.1);
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.section {
+  background: var(--card-bg);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.3s ease;
+}
+
+header {
+  background-color: var(--header-bg);
+  backdrop-filter: blur(8px);
+}
+
     .section {
   background: white;
   margin: 10px;
@@ -148,6 +180,10 @@
     <h1>VATHSALYAM</h1>
     <p>SPECIAL SCHOOL FOR SPECIAL CHILDRENS</p>
   </header>
+  <button id="themeToggle" style="margin-top: 15px; padding: 8px 16px; font-size: 1rem; border: none; border-radius: 6px; cursor: pointer;">
+  Toggle Theme
+</button>
+
 
   <!-- About -->
   <section class="section-content">
@@ -326,7 +362,16 @@
   <footer>
     <p>© VATHSALYAM 2025 - All Rights Reserved</p>
   </footer>
+  <script>
+  const toggleBtn = document.getElementById('themeToggle');
+  toggleBtn.addEventListener('click', () => {
+    document.body.classList.toggle('dark');
+    toggleBtn.innerText = document.body.classList.contains('dark') ? 'Light Mode' : 'Dark Mode';
+  });
+</script>
+
 </body>
 </html>
+
 
 
