--- a/index.html
+++ b/index.html
@@ -12,13 +12,6 @@
       --header-bg: rgba(0, 0, 0, 0.6);
     }
 
-    body.dark {
-      --bg-color: #121212;
-      --text-color: #f0f0f0;
-      --card-bg: #1e1e1e;
-      --header-bg: rgba(255, 255, 255, 0.05);
-    }
-
     * {
       margin: 0;
       padding: 0;
@@ -54,23 +47,6 @@
       font-size: 1.5rem;
       font-weight: 500;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-    }
-
-    #themeToggle {
-      margin: 15px auto;
-      display: block;
-      padding: 8px 16px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      background-color: #007bff;
-      color: white;
-      transition: background 0.3s ease;
-    }
-
-    #themeToggle:hover {
-      background-color: #0056b3;
     }
 
     section {
@@ -151,11 +127,9 @@
 </head>
 <body>
   <header>
-    <h1>VATHSALYAM</h1>
+    <h1>VATHSALYAM 🌞</h1>
     <p>SPECIAL SCHOOL FOR SPECIAL CHILDRENS</p>
   </header>
-
-  <button id="themeToggle">🌙 Toggle Theme</button>
 
   <section>
     <h2>About Us</h2>
@@ -220,13 +194,5 @@
   <footer>
     <p>© VATHSALYAM 2025 - All Rights Reserved</p>
   </footer>
-
-  <script>
-    const toggleBtn = document.getElementById('themeToggle');
-    toggleBtn.addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-      toggleBtn.innerText = document.body.classList.contains('dark') ? '🌞 Light Mode' : '🌙 Dark Mode';
-    });
-  </script>
 </body>
 </html>
